Changes in Version 0.2-1

  o Bug fix in dhpois() and dhnbinom() when 'x' is a vector and 'pi' is a
    scalar (reported by Andrea Gilardi).

  o Catch errors when inverting the Hessian from optim, returning an NA
    matrix of correct dimension instead.

  o Conditionally register autoplot.rootogram() method.


Changes in Version 0.2-0

  o New d/p/q/r/s functions for all combinations of Poisson vs. negative
    binomial (NB) and zero-truncated vs. zero-inflated vs. hurdle. The parameter
    names are all greek letters: lambda for Poisson mean, mu for NB mean,
    theta for NB dispersion, pi for zero-modification probability (either
    inflation or hurdle crossing). The theta parameter may also be called
    size for consistency with base R's nbinom family.

  o New generic function pit() for extracting the probability integral
    transform F(y) where F is the predicted cumulative density function
    and y the observed response.
    
  o Quantile residuals are now computed based on the pit() extractor.
  
  o New graphics function pithist() for PIT histograms based on pit().

  o New data set "OralHealthNL" accompanying Hofstetter et al. (2016):
    "Modeling Caries Experience: Advantages of the Use of the Hurdle Model",
    Caries Research, 50(6), 517-526. doi:10.1159/000448197


Changes in Version 0.1-5

  o New d/p/q/r/s functions for the zero-truncated Poisson distribution
    where the parameter can either be specified in terms of the zero-truncated
    "mean" or the untruncated mean "lambda".
    
  o New ztpoisson() family object for the estimation of zero-truncated
    Poisson regression model via glm().


Changes in Version 0.1-4

  o New qresiduals() generic for computing (randomized) quantile residuals
    along with methods for various objects. (This is somewhat more flexible
    than statmod::qresiduals which is not generic.)
    
  o A Q-Q plot based on quantile residuals is available in the new function
    qqrplot().


Changes in Version 0.1-3
