@@ -1,6 +1,6 @@
 Package: countreg
 Version: 0.2-1
-Date: 2020-09-09
+Date: 2022-04-30
 Title: Count Data Regression
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org",
              comment = c(ORCID = "0000-0003-0918-3766")),
